--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* estilos generales */
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -54,61 +54,60 @@ a{
 .container{
     max-width: 1440px;
     padding: 0 20px;
-}
+} */
 
 /* Head */
 /* Body */
 
-
-body{
-    background-color: rgb(173, 173, 173);
-}
-
-body, input{
+/* body, input{
     font-family: "Nunito", sans-serif;
-}
+} */
 
 
 /* header */
 
-header nav div a img{
-    width: 70px;
-}
+/* header{
+    background-color: #ffffff;
+} */
 
-.menu{
+/* .logo{
+    width: 70px;
+} */
+
+/* .menu{
     background-color: #61c8d1 !important;
     font-size: 20px;       
-}
+} */
 
-.nav-link{
+/* .nav-link{
     color: #ffffff;
 }
 
 .nav-link:hover{
     color: #ffd3b5;
-}
+} */
 
-.menu-icon{
+/* .menu-icon{
     background-image: url(../img/menu-hamburguesa.svg);
-}
+} */
 
-.menu-button{
+/* .menu-button{
     border: none;
 }
 
 .menu-button:focus{
     box-shadow: none;
-}
+} */
 
-.button-search{
+/* .button-search{
     color: #ffffff;
     border-color: #ffffff;
-}
+} */
 
 /* Main Index */
 
 .encabezado-img{
-    background-image: url(./../img/Caramelitos.png);
+    background-image: url(./../img/Caramelitos.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -149,7 +148,7 @@ main{
 
 /* Footer */
 
-.footer{
+/* .footer{
     background-color: #fc5185;
     display: flex;
     flex-direction: column;
@@ -229,20 +228,20 @@ main{
     font-size: 1.1rem;
     font-weight: 500;
     padding: 20px 0px;
-}
+} */
 
-@media only screen and (max-width:850px){
+/* @media only screen and (max-width:850px){
     .footer-section{
         width: 49%;
         margin-bottom: 1.5rem;
     }
-}
+} */
 
-@media only screen and (max-width:510px){
+/* @media only screen and (max-width:510px){
     .footer-section{
         width: 100%;
     }
-}
+} */
 
 /* Main Galeria */
 
@@ -336,13 +335,13 @@ main{
     transition: 0.3s;
 }
 
-@media only screen and (max-width: 1150px){
+/* @media only screen and (max-width: 1150px){
     .section-card-title{
         font-size: 3.5rem;
     }
-}
+} */
 
-@media only screen and (max-width: 850px){
+/* @media only screen and (max-width: 850px){
     .section-card-img{
         padding: 50px 0;
     }
@@ -374,9 +373,9 @@ main{
     .next{
         margin-right: 0;
     }
-}
+} */
 
-@media only screen and (max-width: 510px){
+/* @media only screen and (max-width: 510px){
     .section-card-text, .section-card-title{
         text-align: center;
     }
@@ -394,7 +393,172 @@ main{
     .section-card-buttons a:nth-child(1){
         margin-bottom: 0.7rem;
     }
+} */
+
+/* Main nosotros */
+
+.container{
+    margin: auto;
+}
+
+.nosotros-section{
+    width: 75%;
+    margin: auto;
+    padding-top: 100px 0;
+    background-color: #ffd3b5;
+    border-radius: 10px;
+    padding-bottom: 10px;
+}
+
+.nosotros-title{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    color:#3c122c;
+    font-weight: bold;
+    padding-top: 10%;
+    text-align: center;
+}
+
+.nosotros{
+    display: flex;
+    flex-direction: column;
+}
+
+.nosotros-textos{
+    width: 100%;
+    padding: 10% ;
+}
+
+.parrafo-texto span{
+    color: #fc5185;
+    font-weight: bold;
+}
+
+.nosotros-parrafo{
+    font-size: 18px;
+    color:#3c122c;
+    text-align: justify;
+}
+
+.nosotros-img{
+    width: 50%;
+    margin-left: 25%;
+}
+.img-local-nosotros{
+    object-fit: cover;
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* Main Contacto */
+
+.content{
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+.logo-contacto{
+    text-align: center;
+    font-size: 3em;
+}
+
+.logo-contacto span{
+    color: #fc5185;
+}
+
+.contact-wrapper{
+    box-shadow: 0 0 20px 0 rgb(255, 255, 255 .3);
+}
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form{
+    background:#ffeffe;
+}
+
+.contact-form form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form .block{
+    grid-column: 1 / 3;
+}
+
+.contact-form form p{
+    margin: 0;
+    padding: 1em;
 }
 
 
 
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea{
+    width: 100%;
+    padding: 0.7em;
+    border-radius: 5px;
+    outline: none;
+}
+
+.contact-form form button{
+    background: #ffd3b5;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus{
+    background-color: #3c122c;
+    color: #ffffff;
+    transition: background-color 0.5s ease-out;
+    outline: 0;
+}
+
+.contact-info{
+    background: #fc5185;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p{
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.contact-info ul{
+    list-style: none;
+    padding: 0;
+}
+
+.contact-info ul li{
+    padding: 0.3em;
+}
+
+/* pantallas grandes */
+
+@media (min-width: 700px){
+    main{
+        padding: 0 4rem;
+    }
+
+    .contact-wrapper{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    .contact-wrapper > *{
+        padding: 2em;
+    }
+
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p{
+        padding: 1em;
+        text-align: left;
+    }
+} 
