--- a/scss/utilities/_globals.scss
+++ b/scss/utilities/_globals.scss
@@ -4,9 +4,18 @@
     box-sizing: border-box;
 }
 
+main{
+    background-color: #61c8d1;
+}
+
 a{
     text-decoration: none;
     color: #3c122c;
+}
+
+h1{
+    text-align: center;
+    padding-top: 10px ;
 }
 
 .input{
