--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,18 @@
   box-sizing: border-box;
 }
 
+main {
+  background-color: #61c8d1;
+}
+
 a {
   text-decoration: none;
   color: #3c122c;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 10px;
 }
 
 .input {
@@ -87,18 +96,46 @@ header .menu .navbar-collapse .navbar-nav .buscador .button-search {
   border-color: #ffffff;
 }
 
-.footer {
+.main-index .cards-01 .container .row .col-md-4 .card {
+  align-items: center;
+  margin-top: 15px;
+  text-align: center;
+}
+.main-index .cards-01 .container .row .col-md-4 .card-img {
+  width: 100px;
+}
+.main-index .mas-buscados .container .row .col-md-4 .card {
+  align-items: center;
+  margin-top: 15px;
+  text-align: center;
+}
+.main-index .mas-buscados .container .row .col-md-4 .card-img {
+  width: 100px;
+}
+
+.encabezado-img {
+  background-image: url(./../img/Caramelitos.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
+}
+
+footer {
   background-color: #fc5185;
   display: flex;
   flex-direction: column;
 }
-.footer .footer-sections {
+footer .footer-sections {
   background-color: #ffeffe;
   padding: 50px 20px;
   display: flex;
   justify-content: center;
 }
-.footer .footer-sections .footer-sections-container {
+footer .footer-sections .footer-sections-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -106,46 +143,46 @@ header .menu .navbar-collapse .navbar-nav .buscador .button-search {
   max-width: 1440px;
   padding: 0px 20px;
 }
-.footer .footer-sections .footer-sections-container .footer-section .footer-section-title {
+footer .footer-sections .footer-sections-container .footer-section .footer-section-title {
   color: #3c122c;
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
-.footer .footer-sections .footer-sections-container .footer-section .footer-section-table {
+footer .footer-sections .footer-sections-container .footer-section .footer-section-table {
   list-style: none;
 }
-.footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links {
+footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links {
   margin-bottom: 0.2rem;
 }
-.footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links .footer-section-link {
+footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links .footer-section-link {
   color: #3c122c;
   font-size: 1.1rem;
 }
-.footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links .footer-section-link:hover {
+footer .footer-sections .footer-sections-container .footer-section .footer-section-table .footer-section-links .footer-section-link:hover {
   color: #61c8d1;
 }
-.footer .footer-sections .footer-sections-container .ft-social .follow .social-container {
+footer .footer-sections .footer-sections-container .ft-social .follow .social-container {
   margin-bottom: 1rem;
   height: 28px;
 }
-.footer .footer-sections .footer-sections-container .ft-social .follow .social-container .social-icon {
+footer .footer-sections .footer-sections-container .ft-social .follow .social-container .social-icon {
   margin-right: 15px;
 }
-.footer .footer-sections .footer-sections-container .ft-social .follow .social-container .social-icon .img-social {
+footer .footer-sections .footer-sections-container .ft-social .follow .social-container .social-icon .img-social {
   height: 28px;
 }
-.footer .footer-sections .footer-sections-container .suscribe-container-form {
+footer .footer-sections .footer-sections-container .suscribe-container-form {
   display: flex;
   flex-direction: column;
 }
-.footer .footer-sections .footer-sections-container .suscribe-container-form .suscribe-container-input {
+footer .footer-sections .footer-sections-container .suscribe-container-form .suscribe-container-input {
   margin-bottom: 1rem;
 }
-.footer .footer-sections .footer-sections-container .suscribe-container-form .suscribe-container-button {
+footer .footer-sections .footer-sections-container .suscribe-container-form .suscribe-container-button {
   text-align: center;
   width: 150px;
 }
-.footer .footer-copy-text {
+footer .footer-copy-text {
   text-align: center;
   color: #ffffff;
   font-size: 1.1rem;
